This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-07-27:

- Fixed a bug introduced on 2022-02-08 where $PPID was incorrect when a script
  without a #! path was executed.

- Fixed a completion bug in the vi line editor. It now correctly completes
  the sole member of a directory when tab is pressed immediately after /.
  Thanks to K. Eugene Carlson for the report and the fix.

2022-07-26:

- Fixed incorrect handling of initial zeros in test/[ and [[ arithmetic
  comparison operators. For example, [[ 0x0A -eq 10 ]] yielded false but
  [[ 1+0x0A -eq 11 ]] yielded true.

- Fixed comparing long floating point (typeset -lF) values in test/[ and [[;
  the values were reduced to standard floating point before comparing.

2022-07-25:

- Release candidate: ksh 93u+m/1.0.0-rc.1.

2722-07-24:

- Add new 'man' function in src/cmd/ksh93/fun/man. This integrates the --man
  self-documentation of ksh built-in and external AST commands with your
  system's 'man' command so you can conveniently use 'man' for all commands,
  whether built-in or external. To use this, put the file in a directory in
  your $FPATH and then issue 'autoload man' in your .kshrc to override the
  system's man(1) command. See the file for details.

- Add new 'autocd' function in src/cmd/ksh93/fun/autocd. This activates a
  feature like 'shopt -s autocd' in bash: type only a directory name to change.
  See the file for details. Add this file to a directory in your $FPATH to use.

- New feature to make 'set -b'/'set -o notify' more usable. When that option
  is on (and either the vi or emacs/gmacs line editor is in use), 'Done' and
  similar notifications from completed background jobs no longer mess up the
  command line you're typing. Instead, the notification is inserted directly